# Microservices_Programming_Assignment-2

./: Dockerfile  docker-compose.yml  output.txt  typescript  vending_machine.thrift
gen-cpp/: BeveragePreferenceService.h  BeveragePreferenceService_server.skeleton.cpp
gen-lua/: vending_machine_OrderBeverageService.lua
nginx_reverse_proxy/conf/: nginx.conf
nginx_reverse_proxy/lua-scripts/api/beverageservice/: order.lua
script/: output.txt
src/BeveragePreferenceService/: BeveragePreferenceHandler.cpp  BeveragePreferenceHandler.h  BeveragePreferenceServer.cpp  CMakeLists.txt
src/OrderBeverageService/: OrderBeverageHandler.cpp
src/WeatherService/: WeatherHandler.h
